@@ -6,6 +6,7 @@
 		<import addon="script.module.simplejson" version="3.3.0" />
 		<import addon="script.common.plugin.cache" version="2.5.2" />
 		<import addon="script.module.myconnpy" version="1.1.7"/>
+		<import addon="script.module.requests" version="2.18.4" />
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="default.py">
 		<provides>audio video</provides>
@@ -17,6 +18,7 @@
 		<description lang="en">Generate Strm files from Kodi Plugins,that can be scraped to the library.
 			Supported content: Movies, TV-Shows, Music. Special thanks goes to
 			Kodinerds.net users: @breaksrmine, @Casablanca89, @Construktor, @ecazo, @Eigen, @Elux, @haltandcatchfire, @krani83, @Sagorian, @SirusX, @stereodruid, @willriker88, @XsupergurkeX
+			Attention: This addon uses the TVDb API (https://api.thetvdb.com) to search for episode data, if necessary
 		</description>
 		<disclaimer lang="en"></disclaimer>
 		<summary lang="de">
@@ -27,6 +29,7 @@
 			Datenbank hinzugefügt werden können.
 			Unterstützte Formate: Serien, Filme und Musik. Vielen Dank an Kodinerds.net und speziell an
 			die Mitglieder: @breaksrmine, @Casablanca89, @Construktor, @ecazo, @Eigen, @Elux, @haltandcatchfire, @krani83, @Sagorian, @SirusX, @stereodruid, @willriker88, @XsupergurkeX
+			Hinweis: Dieses Addon verwendet die TVDb API (https://api.thetvdb.com), um nach Episodendaten zu suchen, wenn nötig
 		</description>
 		<disclaimer lang="de"></disclaimer>
 		<language></language>
