@@ -180,16 +180,18 @@ def cleanByDictReplacements(string):
 
 def getMovieStrmPath(strmTypePath, mediaListEntry_name, movie_name=None):
     if folder_medialistentry_movie and folder_medialistentry_movie == 'true':
-        mediaListEntry_name = cleanByDictReplacements(mediaListEntry_name) if mediaListEntry_name.find('++RenamedTitle++') == -1 else cleanStrmFilesys(getStrmname(mediaListEntry_name))
+        mediaListEntry_name = cleanByDictReplacements(mediaListEntry_name) if mediaListEntry_name.find('++RenamedTitle++') == -1 else getStrmname(mediaListEntry_name)
+        mediaListEntry_name = cleanStrmFilesys(mediaListEntry_name)
         strmTypePath = os.path.join(strmTypePath, mediaListEntry_name)
     if movie_name and folder_movie and folder_movie == 'true':
         movie_name = cleanByDictReplacements(getStrmname(movie_name))
+        movie_name = cleanStrmFilesys(movie_name)
         strmTypePath = os.path.join(strmTypePath, movie_name)
     return strmTypePath
 
 
 def getStrmname(strm_name):
-    return strm_name.strip().replace('++RenamedTitle++', '')
+    return strm_name.replace('++RenamedTitle++', '').strip()
 
 
 def invCommas(string):
