@@ -1,4 +1,5 @@
 1.3.0-1.3.1
+  Maven85  Search episode data on TVDB if season and episode numbers are not specified 
   gu3nter  Added MYSQL support for Music
   Gismo112 Add SkinUpdate Resume / Watchedstates
   gu3nter  Sqlite3 and MYSQL are now supported in one Branch
